--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,3 +25,4 @@ jobs:
         version_label: 1
         region: eu-west-2
         deployment_package: deploy.zip
+        use_existing_version_if_available: true
