--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon src/server.ts",
-    "start:production": "node dist/server.js",
-    "build": "tsc"
+    "start:production": "node dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -21,11 +20,10 @@
   "dependencies": {
     "@types/express": "^4.17.11",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1"
   }
 }
