--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -2,5 +2,6 @@ FROM node:14.15.4-alpine3.10
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
+RUN npm install -g typescript
 COPY . .
 EXPOSE 8080
