--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   "dependencies": {
     "@types/express": "^4.17.11",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1"
+    "nodemon": "^2.0.7"
   }
 }
