--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@types/express": "^4.17.11",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "ts-node": "^9.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1"
+    "nodemon": "^2.0.7"
   }
 }
