--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon src/server.ts",
-    "start:production": "node dist/server.js"
+    "start:production": "npm run migrate && node dist/server.js",
+    "migrate": "knex migrate:latest",
+    "seed": "knex seed:run"
   },
   "repository": {
     "type": "git",
@@ -21,8 +23,10 @@
     "@types/express": "^4.17.11",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "typescript": "^4.1.3",
-    "ts-node": "^9.1.1"
+    "knex": "^0.21.16",
+    "pg": "^8.5.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
