--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon src/server.ts",
+    "start:dev": "npm run migrate && npm run seed && nodemon src/server.ts",
     "start:production": "npm run migrate && node dist/server.js",
     "migrate": "knex migrate:latest",
     "seed": "knex seed:run"
@@ -20,15 +20,22 @@
   },
   "homepage": "https://github.com/MikeyBower93/help-recycle-api#readme",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.16",
     "pg": "^8.5.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "nodemon": "^2.0.7"
   }
 }
